Don't insert linebreaks into text input fields. https://bugs.webkit.org/show_bug.cgi?id=81660

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: fast/forms/textfield-no-linebreak.html

* editing/TypingCommand.cpp:
(canAppendNewLineFeed): Only assume that a linefeed can be appended, if
after the BeforeTextInserted event the event text is still a newline.

LayoutTests:

* fast/forms/textfield-no-linebreak.html: Added.
* fast/forms/textfield-no-linebreak-expected.html: Added.


Canonical link: https://commits.webkit.org/100175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112803 268f45cc-cd09-0410-ab3c-d52691b4dbfc